[package]
name = "libks"
authors = ["spindlymist"]
description = "A library for working with Knytt Stories levels."
version = "0.2.2"
edition = "2021"
homepage = "https://github.com/spindlymist/libks/"
repository = "https://github.com/spindlymist/libks/"
license = "Apache-2.0"
readme = "README.md"
keywords = ["knytt", "stories", "ks"]
categories = ["parser-implementations"]

[dependencies]
byteorder = "1.4.3"
encoding_rs = "0.8.32"
flate2 = "1.0.25"
rust-ini = "0.19.0"
serde = { version = "1.0.163", features = ["serde_derive"], optional = true }
thiserror = "1.0.38"

[features]
serde = ["dep:serde"]
