[package]
name = "libks"
authors = ["spindlymist"]
description = "A library for working with Knytt Stories levels."
version = "0.2.2"
edition = "2021"
homepage = "https://github.com/spindlymist/libks/"
repository = "https://github.com/spindlymist/libks/"
license = "Apache-2.0"
readme = "README.md"
keywords = ["knytt", "stories", "ks"]
categories = ["parser-implementations"]

[dependencies]
byteorder = "1.4.3"
const-str = { version = "0.5.7" }
encoding_rs = "0.8.32"
flate2 = "1.0.25"
image = { version = "0.24.7", optional = true }
libks_ini = { version = "0.1.0", path = "../libks_ini" }
rust_decimal = { version = "1.37.2", optional = true }
serde = { version = "1.0.163", features = ["serde_derive"], optional = true }
thiserror = "1.0.38"
regex = { version = "1.12.2", features = ["use_std"] }

[features]
fractional-coords = []
image = ["dep:image"]
serde = ["dep:serde"]
decimal = ["fractional-coords", "dep:rust_decimal"]
