[package]
name = "libks"
authors = ["spindlymist"]
description = "A library for working with Knytt Stories levels."
version = "0.2.2"
edition = "2021"
homepage = "https://github.com/spindlymist/libks/"
repository = "https://github.com/spindlymist/libks/"
license = "Apache-2.0"
readme = "README.md"
keywords = ["knytt", "stories", "ks"]
categories = ["parser-implementations"]

[dependencies]
byteorder = "1.5.0"
const-str = { version = "1.0.0" }
encoding_rs = "0.8.35"
flate2 = "1.1.5"
libks_ini = { version = "0.1.0", path = "../libks_ini" }
serde = { version = "1.0.228", features = ["serde_derive"], optional = true }
thiserror = "2.0.17"
regex = { version = "1.12.2", features = ["use_std"] }

[features]
fractional-coords = []
serde = ["dep:serde"]
